--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
-  background-color: #460e44;
+  background-color: #8f6552;
 }
 h2 {
+  color: #ffffff;
+}
+p {
   color: #ffffff;
 }
 @import
