--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 *:after {
   -webkit-box-sizing: inherit;
   box-sizing: inherit;
-  text-align: center;
+  /* text-align: center; */
 }
 
 html {
