--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   width: 3456px;
   height: 2304px;
-  background-image:url("https://github.com/Haruo-es/4seminar/edit/main/");
+  background-image:url("https://github.com/Haruo-es/4seminar/blob/main/3388477_l.jpg");
 }
 }
 h2 {
