--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 */  margin: 0;
 */  width: 3456px;
 */  height: 2304px;
-*/  background-image:url("https://github.com/Haruo-es/4seminar/blob/main/3388477_l.jpg");
+*/  background-image:./3388477_l.jpg;
 */}
 h2 {
   color: #000000;
