Update and rename style.css to style_index.css

--- a/style_index.css
+++ b/style_index.css
@@ -1,9 +1,9 @@
-*/body {
-*/  margin: 0;
-*/  width: 3456px;
-*/  height: 2304px;
-*/  background-image:./3388477_l.jpg;
-*/}
+body {
+  */margin: 0;
+  */width: 3456px;
+  */height: 2304px;
+  background-image:./3388477_l.jpg;
+}
 h2 {
   color: #000000;
 }
