--- a/style_index.css
+++ b/style_index.css
@@ -1,7 +1,7 @@
 body {
-  */margin: 0;
-  */width: 3456px;
-  */height: 2304px;
+  /* margin: 0;
+  width: 3456px;
+  height: 2304px; */
   background-image:./3388477_l.jpg;
 }
 h2 {
