--- a/style_index.css
+++ b/style_index.css
@@ -2,28 +2,32 @@ body{
     background: #81bcd8;
 }
 .site-header{
-    background: #ffffff;
+    background: #fff;
     display: flex;
     padding: 60px 20px;
     position: fixed;
     justify-content: space-between;
     width: 100%;
 }
+.site-logo img{
+    height: 20px;
+    width: auto;
+}
 .gnav__menu{
     display: flex;
 }
 .gnav__menu__item{
-    margin-left: 10px;
+    margin-left: 20px;
 }
 .gnav__menu__item a{
     color: #333;
     text-decoration: none;
 }
-.pc{
+.hero{
     max-height: 500px;
     overflow: hidden;
 }
-.pc img{
+.hero img{
     height: auto;
     width: 100%;
 }
@@ -39,4 +43,9 @@ body{
 .site-footer{
     background: #333;
     padding: 80px 0;
+}
+.copyright{
+    color: #fff;
+    font-size: 12px;
+    text-align: center;
 }
