--- a/style_index.css
+++ b/style_index.css
@@ -2,16 +2,16 @@ body{
     background: #81bcd8;
 }
 .site-header{
-    background: #fff;
+    background: rgba(255,255,255,0.5);
     display: flex;
-    padding: 20px;
-    position: absolute;
+    padding: 60px 20px;
+    position: fixed;
     justify-content: space-between;
     width: 100%;
 }
-.site-header.fixed{
-    position: fixed;
-    top: 0;
+.site-header.transform{
+    background: rgba(255,255,255,0.9);
+    padding: 20px;
 }
 .site-logo img{
     height: 20px;
