--- a/style.css
+++ b/style.css
@@ -9,6 +9,44 @@ body {
  background-size: 15px 15px;
 }
 
+
+
+h1{
+    position: relative;
+}
+
+h1:first-letter {
+  font-size: 2em;
+  color: #7172ac;
+}
+
+h3 {
+  position: relative;
+  display: inline-block;
+  padding: 0 55px;
+}
+
+h3:before, h3:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  width: 45px;
+  height: 1px;
+  background-color: black;
+}
+
+h3:before {
+  left:0;
+}
+h3:after {
+  right: 0;
+}
+
+form p {
+    font-weight: bold;
+}
+
 header {
   height: 80px;
   width: 98%;
@@ -46,7 +84,7 @@ header a {
   position: relative;  /* アンダーバーの位置を決めるための基準 */
 }
 
-header li ::after {
+.pc-nav li ::after {
   position: absolute; /*親要素であるaタグを基準に位置を指定*/
   bottom: 10px; /*アンダーバーが位置する、各リストの下端からの高さ*/
   left: 0;/*アンダーバーを各リストの左端に指定*/
@@ -59,7 +97,7 @@ header li ::after {
   transition: transform 0.5s;/*変形の時間*/
 }
 
-header li :hover::after {
+.pc-nav li :hover::after {
   transform: scale(1, 1); /*ホバー後、x軸方向に1（相対値）伸長*/
 }
 
@@ -176,38 +214,123 @@ input[type=checkbox]:checked + .checkbox01::after {
  background: #b9b9b9;
 }
 
-h1{
-    position: relative;
+.map {
+      padding:7px;
+      border:1px solid #ccc;
+      background:#fff;
+      box-shadow: 1px 1px 10px rgba(20,20,20,0.2);/* ドロップシャドウ 【横位置 縦位置 ぼかし幅 色】 */
 }
 
-h1:first-letter {
-  font-size: 2em;
-  color: #7172ac;
+.sp-nav {
+   display: none;
 }
 
-h3 {
-  position: relative;
-  display: inline-block;
-  padding: 0 55px;
-}
-
-h3:before, h3:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  display: inline-block;
-  width: 45px;
-  height: 1px;
-  background-color: black;
-}
-
-h3:before {
-  left:0;
-}
-h3:after {
-  right: 0;
-}
-
-p {
-    font-weight: bold;
+@media screen and (max-width: 640px) {
+   .pc-nav {
+      display: none;
+   }
+   .sp-nav {
+      z-index: 1;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      display: block;
+      width: 100%;
+      background: rgba(0, 0, 0, .8);
+      opacity: 0;
+      transform: translateY(-100%);
+      transition: all .2s ease-in-out;
+   }
+   #hamburger {
+   position: relative;
+   display: block;
+   width: 30px;
+   height: 25px;
+   margin: 0 0 0 auto;
+   }
+   #hamburger span {
+   position: absolute;
+   top: 50%;
+   left: 0;
+   display: block;
+   width: 100%;
+   height: 2px;
+   background-color: black;
+   transform: translateY(-50%);
+   }
+   #hamburger::before {
+   content: '';
+   display: block;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 2px;
+   background-color: black;
+   }
+   #hamburger::after {
+   content: '';
+   display: block;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 70%;
+   height: 2px;
+   background-color: black;
+   }
+   /*スマホメニュー*/
+   .sp-nav ul {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+   }
+   .sp-nav li {
+      margin: 0;
+      padding: 0;
+   }
+   .sp-nav li span {
+      font-size: 15px;
+      color: #fff;
+   }
+   .sp-nav li a, .sp-nav li span {
+      display: block;
+      padding: 20px 0;
+      color: white;
+   }
+   /*-閉じるアイコンー*/
+   .sp-nav .close {
+      position: relative;
+      padding-left: 20px;
+   }
+   .sp-nav .close::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( 45deg );
+   }
+   .sp-nav .close::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( -45deg );
+   }
+   .toggle {
+      transform: translateY( 0 );
+      opacity: 1;
+   }
 }
