--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 
-
+/* 文字 ここから */
 h1{
     position: relative;
 }
@@ -46,9 +46,11 @@ h3:after {
 form p {
     font-weight: bold;
 }
+/*　文字 ここまで */
 
+/* ヘッダー ここから */
 header {
-  height: 80px;
+  height: 70px;
   width: 98%;
   padding: 0px 15px;
   background-color: translate;
@@ -101,6 +103,122 @@ header a {
   transform: scale(1, 1); /*ホバー後、x軸方向に1（相対値）伸長*/
 }
 
+.sp-nav {
+   display: none;
+}
+
+@media screen and (max-width: 640px) {
+   .pc-nav {
+      display: none;
+   }
+   .sp-nav {
+      z-index: 1;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      display: block;
+      width: 100%;
+      background: rgba(0, 0, 0, .8);
+      opacity: 0;
+      transform: translateY(-100%);
+      transition: all .2s ease-in-out;
+   }
+   #hamburger {
+   position: relative;
+   display: block;
+   width: 30px;
+   height: 25px;
+   margin: 0 0 0 auto;
+   }
+   #hamburger span {
+   position: absolute;
+   top: 30px;
+   left: 0;
+   display: block;
+   width: 100%;
+   height: 2px;
+   background-color: black;
+   transform: translateY(-50%);
+   }
+   #hamburger::before {
+   content: '';
+   display: block;
+   position: absolute;
+   top: 18px;
+   left: 0;
+   width: 100%;
+   height: 2px;
+   background-color: black;
+   }
+   #hamburger::after {
+   content: '';
+   display: block;
+   position: absolute;
+   top: 40px;
+   left: 0;
+   width: 70%;
+   height: 2px;
+   background-color: black;
+   }
+   /*スマホメニュー*/
+   .sp-nav ul {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+   }
+   .sp-nav li {
+      margin: 0;
+      padding: 0;
+   }
+   .sp-nav li span {
+      font-size: 15px;
+      color: #fff;
+   }
+   .sp-nav li a, .sp-nav li span {
+      display: block;
+      padding: 20px 0;
+      color: white;
+   }
+   /*-閉じるアイコンー*/
+   .sp-nav .close {
+      position: relative;
+      padding-left: 20px;
+   }
+   .sp-nav .close::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( 45deg );
+   }
+   .sp-nav .close::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( -45deg );
+   }
+   .toggle {
+      transform: translateY( 0 );
+      opacity: 1;
+   }
+}
+/* ヘッダー ここまで */
+
+/* チェックボックス ここから */
 input[type=checkbox] {
     display: none;
 }
@@ -141,7 +259,10 @@ input[type=checkbox] {
 input[type=checkbox]:checked + .checkbox01::after {
     opacity: 1;
 }
+/* チェックボックス ここまで */
 
+
+/* ボタン　ここから　*/
 .button-1 {
   background-color:#ed7a9c;
   border-radius: 8px;
@@ -213,124 +334,13 @@ input[type=checkbox]:checked + .checkbox01::after {
 .button:active:before {
  background: #b9b9b9;
 }
+/* ボタン　ここまで　*/
 
+/* マップ　ここから */
 .map {
       padding:7px;
       border:1px solid #ccc;
       background:#fff;
       box-shadow: 1px 1px 10px rgba(20,20,20,0.2);/* ドロップシャドウ 【横位置 縦位置 ぼかし幅 色】 */
 }
-
-.sp-nav {
-   display: none;
-}
-
-@media screen and (max-width: 640px) {
-   .pc-nav {
-      display: none;
-   }
-   .sp-nav {
-      z-index: 1;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      display: block;
-      width: 100%;
-      background: rgba(0, 0, 0, .8);
-      opacity: 0;
-      transform: translateY(-100%);
-      transition: all .2s ease-in-out;
-   }
-   #hamburger {
-   position: relative;
-   display: block;
-   width: 30px;
-   height: 25px;
-   margin: 0 0 0 auto;
-   }
-   #hamburger span {
-   position: absolute;
-   top: 50%;
-   left: 0;
-   display: block;
-   width: 100%;
-   height: 2px;
-   background-color: black;
-   transform: translateY(-50%);
-   }
-   #hamburger::before {
-   content: '';
-   display: block;
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 2px;
-   background-color: black;
-   }
-   #hamburger::after {
-   content: '';
-   display: block;
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   width: 70%;
-   height: 2px;
-   background-color: black;
-   }
-   /*スマホメニュー*/
-   .sp-nav ul {
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-   }
-   .sp-nav li {
-      margin: 0;
-      padding: 0;
-   }
-   .sp-nav li span {
-      font-size: 15px;
-      color: #fff;
-   }
-   .sp-nav li a, .sp-nav li span {
-      display: block;
-      padding: 20px 0;
-      color: white;
-   }
-   /*-閉じるアイコンー*/
-   .sp-nav .close {
-      position: relative;
-      padding-left: 20px;
-   }
-   .sp-nav .close::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 0;
-      display: block;
-      width: 16px;
-      height: 1px;
-      background: #fff;
-      transform: rotate( 45deg );
-   }
-   .sp-nav .close::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 0;
-      display: block;
-      width: 16px;
-      height: 1px;
-      background: #fff;
-      transform: rotate( -45deg );
-   }
-   .toggle {
-      transform: translateY( 0 );
-      opacity: 1;
-   }
-}
+/* マップ　ここまで */
